syntax="proto3";

message SubscriptionRequest {
  string subscription_id = 1;
}


message SubscriptionResponse {
  string subscription_id = 1;
  string subscription_name = 2;
  double price = 3;
  string currency = 4;
}


service SubscriptionManager {
  rpc GetSubscription (SubscriptionRequest) returns (SubscriptionResponse) {}
}